--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Space SHMUP Practice</title>
+    <title>Unity WebGL Player | tempProspector</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Space SHMUP Practice</div>
+        <div id="unity-build-title">tempProspector</div>
       </div>
     </div>
     <script>
@@ -56,15 +56,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SHMUP_PLUS.loader.js";
+      var loaderUrl = buildUrl + "/ProsProto.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SHMUP_PLUS.data",
-        frameworkUrl: buildUrl + "/SHMUP_PLUS.framework.js",
-        codeUrl: buildUrl + "/SHMUP_PLUS.wasm",
+        dataUrl: buildUrl + "/ProsProto.data.gz",
+        frameworkUrl: buildUrl + "/ProsProto.framework.js.gz",
+        codeUrl: buildUrl + "/ProsProto.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Space SHMUP Practice",
-        productVersion: "0.1",
+        productName: "tempProspector",
+        productVersion: "1.0",
         showBanner: unityShowBanner,
       };
 
